Change folder names, improve templates, add teaching, media

--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@ layout: default
 title: Bernardo Loureiro
 ---
 
-<div class="row">
-  <div class="col-xs-12 col-md-4">
+<section class="row">
+  <div class="col-xs-12 col-md-4 pl-0">
     <p>I am an urbanist and I work as a consultant and developer in data analysis, visualization, and mapping.</p>
     <p>I also teach classes and workshops on these topics.</p>
-    <p>I run <a href="https://medidasp.com/" target="_blank">Medida SP</a>, an urban data visualization lab in São Paulo, Brazil.</p>
+    <p>I've created <a href="https://medidasp.com/" target="_blank">Medida SP</a>, an urban data visualization lab in São Paulo, Brazil.</p>
     <p>Get in touch: <a href="https://github.com/bplmp">Github</a>, <a href="https://www.linkedin.com/in/loureirobernardo">LinkedIn</a>, <a href="https://medium.com/@medidasp/">Medium</a>, bernardo@medidasp.com.</p>
   </div>
-</div>
+</section>
+
+{% include nav.html %}
 
 <hr/>
-<h3>Projects</h3>
 {% include projects.html %}
+
+<hr/>
+{% include teaching.html %}
+
+<hr/>
+{% include media.html %}
